# chess

./: CMakeLists.txt  README.md  config.h  get_play.py  main.cpp  stock.py  stock_c.py
board/: Board.cpp  Board.h  TwoDimensionalVector.h
game/: Game.cpp  Game.h
multipiece/: MultiPiece.cpp  MultiPiece.h
pieces/: Bishop.cpp  Bishop.h  King.cpp  King.h  Knight.cpp  Knight.h  Pawn.cpp  Pawn.h  Piece.cpp  Piece.h  Queen.cpp  Queen.h  Rock.cpp  Rock.h  Rook.cpp  Rook.h
players/: Client.cpp  Client.h  Local.cpp  Local.h  NetworkPlayer.cpp  NetworkPlayer.h  Player.cpp  Player.h  Server.cpp  Server.h
point/: Point.cpp  Point.h
scripts/: get_game.py  get_play.py  requirements.txt  stock.py
